ingress/ingress-resource-backend.yaml
# Warning: extensions/v1beta1 Ingress is deprecated in v1.14+, unavailable in v1.22+; use networking.k8s.io/v1 Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-all
spec:
  backend:
    serviceName: general-service
    servicePort: 80
